Added drawing layers (bins) and tweaked a few other things